--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/04-Complex-Networks-Winter-Workshop/ChildPages/1-Details/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/04-Complex-Networks-Winter-Workshop/ChildPages/1-Details/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-08-06T22:50:40Z</date>
+						<date>2018-08-11T00:30:55Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -482,11 +482,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								gXH2Ra50qOF5
-								NR9XPq6LuQ==
+								FleD81LKckA2
+								zKo7eXZImg==
 								</data>
 								<key>Size</key>
-								<integer>132736</integer>
+								<integer>132551</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
