--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -41,17 +41,17 @@
 						</dict>
 						<dict>
 							<key>fullPath</key>
-							<string>PFD for participants HWB Agenda.pdf</string>
+							<string>PDF For Participants SOS Symposium 2018 schedule.pdf</string>
 							<key>identifier</key>
-							<string>5F8068D5-0482-4102-A77A-1856EF09FAEE</string>
+							<string>7A6F9ECD-FC22-4884-B91E-57B9A76DB313</string>
 							<key>isInternal</key>
 							<true/>
 						</dict>
 						<dict>
 							<key>fullPath</key>
-							<string>PDF For Participants SOS Symposium 2018 schedule.pdf</string>
+							<string>PFD for participants HWB Agenda.pdf</string>
 							<key>identifier</key>
-							<string>7A6F9ECD-FC22-4884-B91E-57B9A76DB313</string>
+							<string>5F8068D5-0482-4102-A77A-1856EF09FAEE</string>
 							<key>isInternal</key>
 							<true/>
 						</dict>
@@ -2840,7 +2840,7 @@
 					<key>page34 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-08-03T17:11:23Z</date>
+						<date>2018-08-11T15:33:26Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -2965,6 +2965,16 @@
 								<key>Size</key>
 								<integer>90979</integer>
 							</dict>
+							<key>files/stacks-image-580baf6-248x248.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								OGSW8MSxffNf
+								eqQN8VH97Q==
+								</data>
+								<key>Size</key>
+								<integer>13349</integer>
+							</dict>
 							<key>files/stacks-image-678f5ae-250x250.png</key>
 							<dict>
 								<key>Digest</key>
@@ -3015,6 +3025,16 @@
 								<key>Size</key>
 								<integer>380074</integer>
 							</dict>
+							<key>files/stacks-image-90966db-250x250.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								YpjTgVVBaf31
+								xzRYJpWpzQ==
+								</data>
+								<key>Size</key>
+								<integer>21870</integer>
+							</dict>
 							<key>files/stacks-image-9268316-250x303.png</key>
 							<dict>
 								<key>Digest</key>
@@ -3064,16 +3084,6 @@
 								</data>
 								<key>Size</key>
 								<integer>553274</integer>
-							</dict>
-							<key>files/stacks-image-a5b6257.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								hAKSIa3+ZrXU
-								vEdJbNZi4g==
-								</data>
-								<key>Size</key>
-								<integer>34013</integer>
 							</dict>
 							<key>files/stacks-image-bcdb310-250x261.png</key>
 							<dict>
@@ -3135,16 +3145,6 @@
 								<key>Size</key>
 								<integer>398721</integer>
 							</dict>
-							<key>files/stacks-image-ce6b280.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								u9ob8sB2NjIW
-								EKKV5jmImQ==
-								</data>
-								<key>Size</key>
-								<integer>19050</integer>
-							</dict>
 							<key>files/stacks-image-e5aa8ea-250x250.png</key>
 							<dict>
 								<key>Digest</key>
@@ -3179,11 +3179,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								oVfUZxKQaNxF
-								thQfrUzxUQ==
+								GOj2nuNrrLil
+								rTkjxr7VVw==
 								</data>
 								<key>Size</key>
-								<integer>185981</integer>
+								<integer>183563</integer>
 							</dict>
 							<key>files/stacks_page_page34.js</key>
 							<dict>
@@ -3199,11 +3199,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								NHibq+Oflai1
-								bX0pFcxAoQ==
+								0ZPhdOwOa7JL
+								SbddwMa2Yg==
 								</data>
 								<key>Size</key>
-								<integer>121210</integer>
+								<integer>120195</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -4630,7 +4630,7 @@
 					<key>page46 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-08-03T17:11:23Z</date>
+						<date>2018-08-11T15:37:03Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -4785,6 +4785,16 @@
 								<key>Size</key>
 								<integer>90979</integer>
 							</dict>
+							<key>files/stacks-image-580baf6-248x248.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								OGSW8MSxffNf
+								eqQN8VH97Q==
+								</data>
+								<key>Size</key>
+								<integer>13349</integer>
+							</dict>
 							<key>files/stacks-image-678f5ae-250x250.png</key>
 							<dict>
 								<key>Digest</key>
@@ -4854,6 +4864,16 @@
 								</data>
 								<key>Size</key>
 								<integer>7818</integer>
+							</dict>
+							<key>files/stacks-image-90966db-250x250.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								YpjTgVVBaf31
+								xzRYJpWpzQ==
+								</data>
+								<key>Size</key>
+								<integer>21870</integer>
 							</dict>
 							<key>files/stacks-image-9268316-250x303.png</key>
 							<dict>
@@ -4925,16 +4945,6 @@
 								<key>Size</key>
 								<integer>553274</integer>
 							</dict>
-							<key>files/stacks-image-a5b6257.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								hAKSIa3+ZrXU
-								vEdJbNZi4g==
-								</data>
-								<key>Size</key>
-								<integer>34013</integer>
-							</dict>
 							<key>files/stacks-image-bcdb310-250x261.png</key>
 							<dict>
 								<key>Digest</key>
@@ -4995,16 +5005,6 @@
 								<key>Size</key>
 								<integer>398721</integer>
 							</dict>
-							<key>files/stacks-image-ce6b280.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								u9ob8sB2NjIW
-								EKKV5jmImQ==
-								</data>
-								<key>Size</key>
-								<integer>19050</integer>
-							</dict>
 							<key>files/stacks-image-e5aa8ea-250x250.png</key>
 							<dict>
 								<key>Digest</key>
@@ -5049,11 +5049,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								3aGmXJ1TRr40
-								E58S1Zg8Iw==
+								Y2m2nIvalqUv
+								7T6ZM04EJg==
 								</data>
 								<key>Size</key>
-								<integer>195311</integer>
+								<integer>192893</integer>
 							</dict>
 							<key>files/stacks_page_page46.js</key>
 							<dict>
@@ -5079,11 +5079,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								jATf5EmJG43M
-								V8fDcYye8w==
+								TWM/NEghbaOx
+								VLFXENTeaA==
 								</data>
 								<key>Size</key>
-								<integer>154733</integer>
+								<integer>153997</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -10010,21 +10010,11 @@
 					<key>rw:theme:foundation - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-08-10T18:24:11Z</date>
+						<date>2018-08-11T15:37:03Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
 						<dict>
-							<key>consolidated-43.css</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								3SOyZPpYMqx2
-								34c6HgdeQQ==
-								</data>
-								<key>Size</key>
-								<integer>242066</integer>
-							</dict>
 							<key>consolidated.css</key>
 							<dict>
 								<key>Digest</key>
@@ -10091,8 +10081,8 @@
 				LTk1RkItRDNEMjJDN0JDMUYxXxA0UERGIEZvciBQYXJ0
 				aWNpcGFudHMgU09TIFN5bXBvc2l1bSAyMDE4IHNjaGVk
 				dWxlLnBkZl8QJDdBNkY5RUNELUZDMjItNDg4NC1COTFF
-				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcCPMuFS
-				P7OAC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
+				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcCPnRE2
+				lPeAC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
 				YXRlokBCWE5TT2JqZWN00wkKC0RGSKFFgA2hR4AOgA9f
 				EC1zZnRwOi9jbXBseHN5cy53My51dm0uZWR1L3d3dy1y
 				b290L3RlbXBsYXRlcnkI0j4/TE1fEBNOU011dGFibGVE
@@ -10102,7 +10092,7 @@
 				FF8QJDJFOEM3RERDLUFFQjQtNDFGQi1CRkVELUU2QjhD
 				MEQ0N0M5M18QI1BGRCBmb3IgcGFydGljaXBhbnRzIEhX
 				QiBBZ2VuZGEucGRmXxAkNUY4MDY4RDUtMDQ4Mi00MTAy
-				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcCPMuFSO+aA
+				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcCPnRE2mJGA
 				C9MJCgtkZkihZYAXoUeADoAPXxAtc2Z0cDovY21wbHhz
 				eXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5
 				0j4/a2xcTlNNdXRhYmxlU2V0o2ttQlVOU1NldNMJCgtv
