--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/02-Symposium---Health-and-Wellness/ChildPages/1-Details/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/02-Symposium---Health-and-Wellness/ChildPages/1-Details/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-08-03T17:11:23Z</date>
+						<date>2018-08-11T15:37:03Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -188,6 +188,16 @@
 								<key>Size</key>
 								<integer>90979</integer>
 							</dict>
+							<key>files/stacks-image-580baf6-248x248.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								OGSW8MSxffNf
+								eqQN8VH97Q==
+								</data>
+								<key>Size</key>
+								<integer>13349</integer>
+							</dict>
 							<key>files/stacks-image-678f5ae-250x250.png</key>
 							<dict>
 								<key>Digest</key>
@@ -257,6 +267,16 @@
 								</data>
 								<key>Size</key>
 								<integer>7818</integer>
+							</dict>
+							<key>files/stacks-image-90966db-250x250.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								YpjTgVVBaf31
+								xzRYJpWpzQ==
+								</data>
+								<key>Size</key>
+								<integer>21870</integer>
 							</dict>
 							<key>files/stacks-image-9268316-250x303.png</key>
 							<dict>
@@ -328,16 +348,6 @@
 								<key>Size</key>
 								<integer>553274</integer>
 							</dict>
-							<key>files/stacks-image-a5b6257.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								hAKSIa3+ZrXU
-								vEdJbNZi4g==
-								</data>
-								<key>Size</key>
-								<integer>34013</integer>
-							</dict>
 							<key>files/stacks-image-bcdb310-250x261.png</key>
 							<dict>
 								<key>Digest</key>
@@ -398,16 +408,6 @@
 								<key>Size</key>
 								<integer>398721</integer>
 							</dict>
-							<key>files/stacks-image-ce6b280.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								u9ob8sB2NjIW
-								EKKV5jmImQ==
-								</data>
-								<key>Size</key>
-								<integer>19050</integer>
-							</dict>
 							<key>files/stacks-image-e5aa8ea-250x250.png</key>
 							<dict>
 								<key>Digest</key>
@@ -452,11 +452,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								3aGmXJ1TRr40
-								E58S1Zg8Iw==
+								Y2m2nIvalqUv
+								7T6ZM04EJg==
 								</data>
 								<key>Size</key>
-								<integer>195311</integer>
+								<integer>192893</integer>
 							</dict>
 							<key>files/stacks_page_page46.js</key>
 							<dict>
@@ -482,11 +482,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								jATf5EmJG43M
-								V8fDcYye8w==
+								TWM/NEghbaOx
+								VLFXENTeaA==
 								</data>
 								<key>Size</key>
-								<integer>154733</integer>
+								<integer>153997</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
