CNWW took away apply now button
CNWW took away apply now button

--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/04-Complex-Networks-Winter-Workshop/ChildPages/1-Details/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/04-Complex-Networks-Winter-Workshop/ChildPages/1-Details/Contents.plist
@@ -33,31 +33,11 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-08-11T00:30:55Z</date>
+						<date>2018-08-11T20:28:32Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
 						<dict>
-							<key>files/backgroundImage_110333.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								QETP738VfUvU
-								/jzCm7P3tw==
-								</data>
-								<key>Size</key>
-								<integer>41544</integer>
-							</dict>
-							<key>files/backgroundImage_110703.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								QETP738VfUvU
-								/jzCm7P3tw==
-								</data>
-								<key>Size</key>
-								<integer>41544</integer>
-							</dict>
 							<key>files/small_109872.jpg</key>
 							<dict>
 								<key>Digest</key>
@@ -462,11 +442,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								4g1ddf0dx24G
-								q+wnRC0f/w==
+								pBsDiU4BclLZ
+								OGWf1KnXyQ==
 								</data>
 								<key>Size</key>
-								<integer>181007</integer>
+								<integer>179525</integer>
 							</dict>
 							<key>files/stacks_page_page49.js</key>
 							<dict>
@@ -482,11 +462,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								FleD81LKckA2
-								zKo7eXZImg==
+								BYSWSwxVezRo
+								KeHjNbZelQ==
 								</data>
 								<key>Size</key>
-								<integer>132551</integer>
+								<integer>131498</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
