--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -3592,21 +3592,11 @@
 					<key>page36 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-08-03T17:11:23Z</date>
+						<date>2018-08-11T20:28:32Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
 						<dict>
-							<key>files/backgroundImage_109802.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								QETP738VfUvU
-								/jzCm7P3tw==
-								</data>
-								<key>Size</key>
-								<integer>41544</integer>
-							</dict>
 							<key>files/small_109886.jpg</key>
 							<dict>
 								<key>Digest</key>
@@ -3687,6 +3677,16 @@
 								<key>Size</key>
 								<integer>338288</integer>
 							</dict>
+							<key>files/stacks-image-580baf6-248x248.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								OGSW8MSxffNf
+								eqQN8VH97Q==
+								</data>
+								<key>Size</key>
+								<integer>13349</integer>
+							</dict>
 							<key>files/stacks-image-7284e23-250x256.png</key>
 							<dict>
 								<key>Digest</key>
@@ -3747,6 +3747,16 @@
 								<key>Size</key>
 								<integer>75276</integer>
 							</dict>
+							<key>files/stacks-image-90966db-250x250.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								YpjTgVVBaf31
+								xzRYJpWpzQ==
+								</data>
+								<key>Size</key>
+								<integer>21870</integer>
+							</dict>
 							<key>files/stacks-image-9e3cec5-98x150.png</key>
 							<dict>
 								<key>Digest</key>
@@ -3756,16 +3766,6 @@
 								</data>
 								<key>Size</key>
 								<integer>12547</integer>
-							</dict>
-							<key>files/stacks-image-a5b6257.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								hAKSIa3+ZrXU
-								vEdJbNZi4g==
-								</data>
-								<key>Size</key>
-								<integer>34013</integer>
 							</dict>
 							<key>files/stacks-image-baa9fbc-250x256.png</key>
 							<dict>
@@ -3826,16 +3826,6 @@
 								</data>
 								<key>Size</key>
 								<integer>353790</integer>
-							</dict>
-							<key>files/stacks-image-ce6b280.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								u9ob8sB2NjIW
-								EKKV5jmImQ==
-								</data>
-								<key>Size</key>
-								<integer>19050</integer>
 							</dict>
 							<key>files/stacks-image-eeb0773-250x256.png</key>
 							<dict>
@@ -3901,11 +3891,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Fzk65Upicy7b
-								qRlvclmmUg==
+								kOK04KydBu4i
+								np/Rrjq0pQ==
 								</data>
 								<key>Size</key>
-								<integer>131536</integer>
+								<integer>127666</integer>
 							</dict>
 							<key>files/stacks_page_page36.js</key>
 							<dict>
@@ -3921,11 +3911,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								KnW/x2FpKVKG
-								PWNPtQcJpg==
+								D628PVTKYd7g
+								h/XTb1C1bQ==
 								</data>
 								<key>Size</key>
-								<integer>66389</integer>
+								<integer>64224</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -5838,31 +5828,11 @@
 					<key>page49 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-08-11T00:30:55Z</date>
+						<date>2018-08-11T20:28:32Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
 						<dict>
-							<key>files/backgroundImage_110333.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								QETP738VfUvU
-								/jzCm7P3tw==
-								</data>
-								<key>Size</key>
-								<integer>41544</integer>
-							</dict>
-							<key>files/backgroundImage_110703.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								QETP738VfUvU
-								/jzCm7P3tw==
-								</data>
-								<key>Size</key>
-								<integer>41544</integer>
-							</dict>
 							<key>files/small_109872.jpg</key>
 							<dict>
 								<key>Digest</key>
@@ -6267,11 +6237,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								4g1ddf0dx24G
-								q+wnRC0f/w==
+								pBsDiU4BclLZ
+								OGWf1KnXyQ==
 								</data>
 								<key>Size</key>
-								<integer>181007</integer>
+								<integer>179525</integer>
 							</dict>
 							<key>files/stacks_page_page49.js</key>
 							<dict>
@@ -6287,11 +6257,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								FleD81LKckA2
-								zKo7eXZImg==
+								BYSWSwxVezRo
+								KeHjNbZelQ==
 								</data>
 								<key>Size</key>
-								<integer>132551</integer>
+								<integer>131498</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -10081,8 +10051,8 @@
 				LTk1RkItRDNEMjJDN0JDMUYxXxA0UERGIEZvciBQYXJ0
 				aWNpcGFudHMgU09TIFN5bXBvc2l1bSAyMDE4IHNjaGVk
 				dWxlLnBkZl8QJDdBNkY5RUNELUZDMjItNDg4NC1COTFF
-				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcCPnRE2
-				lPeAC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
+				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcCPvzmX
+				SiOAC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
 				YXRlokBCWE5TT2JqZWN00wkKC0RGSKFFgA2hR4AOgA9f
 				EC1zZnRwOi9jbXBseHN5cy53My51dm0uZWR1L3d3dy1y
 				b290L3RlbXBsYXRlcnkI0j4/TE1fEBNOU011dGFibGVE
@@ -10092,7 +10062,7 @@
 				FF8QJDJFOEM3RERDLUFFQjQtNDFGQi1CRkVELUU2QjhD
 				MEQ0N0M5M18QI1BGRCBmb3IgcGFydGljaXBhbnRzIEhX
 				QiBBZ2VuZGEucGRmXxAkNUY4MDY4RDUtMDQ4Mi00MTAy
-				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcCPnRE2mJGA
+				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcCPvzmXTjyA
 				C9MJCgtkZkihZYAXoUeADoAPXxAtc2Z0cDovY21wbHhz
 				eXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5
 				0j4/a2xcTlNNdXRhYmxlU2V0o2ttQlVOU1NldNMJCgtv
