added E Ready talk description CNWW
added E Ready talk description CNWW

--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/04-Complex-Networks-Winter-Workshop/ChildPages/1-Details/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/04-Complex-Networks-Winter-Workshop/ChildPages/1-Details/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-08-11T20:28:32Z</date>
+						<date>2018-08-12T14:55:45Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -442,31 +442,31 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								pBsDiU4BclLZ
-								OGWf1KnXyQ==
+								4fCJhPgSI44d
+								PFlvIz+DAw==
 								</data>
 								<key>Size</key>
-								<integer>179525</integer>
+								<integer>179692</integer>
 							</dict>
 							<key>files/stacks_page_page49.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								XI/AKqgx8JbV
-								Uw7pT8TVPw==
+								/iJjGuQUia0m
+								WROiO8a59A==
 								</data>
 								<key>Size</key>
-								<integer>24349</integer>
+								<integer>24531</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								BYSWSwxVezRo
-								KeHjNbZelQ==
+								lLI5UkBNfCbk
+								KPV8lwhMpA==
 								</data>
 								<key>Size</key>
-								<integer>131498</integer>
+								<integer>133487</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
