--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -5828,7 +5828,7 @@
 					<key>page49 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-08-11T20:28:32Z</date>
+						<date>2018-08-12T14:55:45Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -6237,31 +6237,31 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								pBsDiU4BclLZ
-								OGWf1KnXyQ==
+								4fCJhPgSI44d
+								PFlvIz+DAw==
 								</data>
 								<key>Size</key>
-								<integer>179525</integer>
+								<integer>179692</integer>
 							</dict>
 							<key>files/stacks_page_page49.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								XI/AKqgx8JbV
-								Uw7pT8TVPw==
+								/iJjGuQUia0m
+								WROiO8a59A==
 								</data>
 								<key>Size</key>
-								<integer>24349</integer>
+								<integer>24531</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								BYSWSwxVezRo
-								KeHjNbZelQ==
+								lLI5UkBNfCbk
+								KPV8lwhMpA==
 								</data>
 								<key>Size</key>
-								<integer>131498</integer>
+								<integer>133487</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -10051,8 +10051,8 @@
 				LTk1RkItRDNEMjJDN0JDMUYxXxA0UERGIEZvciBQYXJ0
 				aWNpcGFudHMgU09TIFN5bXBvc2l1bSAyMDE4IHNjaGVk
 				dWxlLnBkZl8QJDdBNkY5RUNELUZDMjItNDg4NC1COTFF
-				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcCPvzmX
-				SiOAC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
+				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcCQQPpT
+				8KKAC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
 				YXRlokBCWE5TT2JqZWN00wkKC0RGSKFFgA2hR4AOgA9f
 				EC1zZnRwOi9jbXBseHN5cy53My51dm0uZWR1L3d3dy1y
 				b290L3RlbXBsYXRlcnkI0j4/TE1fEBNOU011dGFibGVE
@@ -10062,7 +10062,7 @@
 				FF8QJDJFOEM3RERDLUFFQjQtNDFGQi1CRkVELUU2QjhD
 				MEQ0N0M5M18QI1BGRCBmb3IgcGFydGljaXBhbnRzIEhX
 				QiBBZ2VuZGEucGRmXxAkNUY4MDY4RDUtMDQ4Mi00MTAy
-				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcCPvzmXTjyA
+				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcCQQPpT84yA
 				C9MJCgtkZkihZYAXoUeADoAPXxAtc2Z0cDovY21wbHhz
 				eXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5
 				0j4/a2xcTlNNdXRhYmxlU2V0o2ttQlVOU1NldNMJCgtv
