added sponsor HWB
added sponsor HWB

--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -41,17 +41,17 @@
 						</dict>
 						<dict>
 							<key>fullPath</key>
-							<string>PFD for participants HWB Agenda.pdf</string>
+							<string>PDF For Participants SOS Symposium 2018 schedule.pdf</string>
 							<key>identifier</key>
-							<string>5F8068D5-0482-4102-A77A-1856EF09FAEE</string>
+							<string>7A6F9ECD-FC22-4884-B91E-57B9A76DB313</string>
 							<key>isInternal</key>
 							<true/>
 						</dict>
 						<dict>
 							<key>fullPath</key>
-							<string>PDF For Participants SOS Symposium 2018 schedule.pdf</string>
+							<string>PFD for participants HWB Agenda.pdf</string>
 							<key>identifier</key>
-							<string>7A6F9ECD-FC22-4884-B91E-57B9A76DB313</string>
+							<string>5F8068D5-0482-4102-A77A-1856EF09FAEE</string>
 							<key>isInternal</key>
 							<true/>
 						</dict>
@@ -2840,7 +2840,7 @@
 					<key>page34 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-08-11T15:33:26Z</date>
+						<date>2018-08-13T14:28:29Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -3065,6 +3065,26 @@
 								<key>Size</key>
 								<integer>402239</integer>
 							</dict>
+							<key>files/stacks-image-a036329-156x248.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								RTWYlmmLWn6R
+								HTW0sQzOjw==
+								</data>
+								<key>Size</key>
+								<integer>13409</integer>
+							</dict>
+							<key>files/stacks-image-a036329-156x248@2x.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								NEc9Uv2d3WDh
+								2s5rzRXy9A==
+								</data>
+								<key>Size</key>
+								<integer>30479</integer>
+							</dict>
 							<key>files/stacks-image-a3e2147-250x250.png</key>
 							<dict>
 								<key>Digest</key>
@@ -3179,11 +3199,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								GOj2nuNrrLil
-								rTkjxr7VVw==
+								rlJ4U3UQ+Bc/
+								OJ0Ei/wqhw==
 								</data>
 								<key>Size</key>
-								<integer>183563</integer>
+								<integer>186769</integer>
 							</dict>
 							<key>files/stacks_page_page34.js</key>
 							<dict>
@@ -3199,11 +3219,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								0ZPhdOwOa7JL
-								SbddwMa2Yg==
+								5PfYyElwh0km
+								XJrgr09lMQ==
 								</data>
 								<key>Size</key>
-								<integer>120195</integer>
+								<integer>122171</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -3216,7 +3236,7 @@
 					<key>page35 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-08-13T14:19:15Z</date>
+						<date>2018-08-13T14:27:54Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -3565,11 +3585,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								FBBSDZubOuNU
-								Kjvx3qrEhg==
+								wpDUEH7ktorE
+								cRLFyoZveA==
 								</data>
 								<key>Size</key>
-								<integer>184499</integer>
+								<integer>185673</integer>
 							</dict>
 							<key>files/stacks_page_page35.js</key>
 							<dict>
@@ -3585,11 +3605,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								3VwROfUHdxm/
-								399gLre6eA==
+								AkvluXTYUjy5
+								+sj9uFPt7w==
 								</data>
 								<key>Size</key>
-								<integer>125439</integer>
+								<integer>126017</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -4630,7 +4650,7 @@
 					<key>page46 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-08-11T15:37:03Z</date>
+						<date>2018-08-13T14:28:29Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -4925,6 +4945,26 @@
 								<key>Size</key>
 								<integer>7818</integer>
 							</dict>
+							<key>files/stacks-image-a036329-156x248.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								RTWYlmmLWn6R
+								HTW0sQzOjw==
+								</data>
+								<key>Size</key>
+								<integer>13409</integer>
+							</dict>
+							<key>files/stacks-image-a036329-156x248@2x.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								NEc9Uv2d3WDh
+								2s5rzRXy9A==
+								</data>
+								<key>Size</key>
+								<integer>30479</integer>
+							</dict>
 							<key>files/stacks-image-a3e2147-250x250.png</key>
 							<dict>
 								<key>Digest</key>
@@ -5049,11 +5089,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Y2m2nIvalqUv
-								7T6ZM04EJg==
+								moalZTb62GTj
+								EvNgIEA9Fw==
 								</data>
 								<key>Size</key>
-								<integer>192893</integer>
+								<integer>196099</integer>
 							</dict>
 							<key>files/stacks_page_page46.js</key>
 							<dict>
@@ -5079,11 +5119,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								TWM/NEghbaOx
-								VLFXENTeaA==
+								FQ1vFjLMlcw7
+								7ymikLnjbg==
 								</data>
 								<key>Size</key>
-								<integer>153997</integer>
+								<integer>155973</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -8842,7 +8882,7 @@
 					<key>rw:document:extrafiles - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-08-10T18:24:11Z</date>
+						<date>2018-08-13T14:28:29Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -8891,11 +8931,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Mm/IkEWEChOu
-								08Xplu5T2Q==
+								duCXLPZWhxfq
+								kaNJIfdAfQ==
 								</data>
 								<key>Size</key>
-								<integer>4281</integer>
+								<integer>4377</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -8944,7 +8984,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-08-11T00:30:55Z</date>
+						<date>2018-08-13T14:28:29Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -9983,11 +10023,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								KqR1KWiKbOYX
-								WSPOrizpDw==
+								FpbmxE6QfsOZ
+								/Hu15tHsVA==
 								</data>
 								<key>Size</key>
-								<integer>3327</integer>
+								<integer>3919</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -10000,11 +10040,21 @@
 					<key>rw:theme:foundation - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-08-11T15:37:03Z</date>
+						<date>2018-08-13T14:27:55Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
 						<dict>
+							<key>consolidated-34.css</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								3SOyZPpYMqx2
+								34c6HgdeQQ==
+								</data>
+								<key>Size</key>
+								<integer>242066</integer>
+							</dict>
 							<key>consolidated.css</key>
 							<dict>
 								<key>Digest</key>
@@ -10067,31 +10117,31 @@
 				ZW1vdGVSZXNvdXJjZVxQdWJsaXNoZWRVUkxdUHVibGlz
 				aGVkRGF0ZV8QD0NoYW5nZWRTdGF0dXNlc1ROYW1lWklk
 				ZW50aWZpZXJZVGltZVN0YW1wWUZpbGVUb2tlbgiAEIAA
-				gACADIAIgAeACoAJXxAkMkU4QzdEREMtQUVCNC00MUZC
-				LUJGRUQtRTZCOEMwRDQ3QzkzXxAjUEZEIGZvciBwYXJ0
-				aWNpcGFudHMgSFdCIEFnZW5kYS5wZGZfECQ1RjgwNjhE
-				NS0wNDgyLTQxMDItQTc3QS0xODU2RUYwOUZBRUXSOgs7
-				PFdOUy50aW1lI0HAkOVzIgEVgAvSPj9AQVokY2xhc3Nu
-				YW1lWCRjbGFzc2VzVk5TRGF0ZaJAQlhOU09iamVjdNMJ
-				CgtERkihRYANoUeADoAPXxAtc2Z0cDovY21wbHhzeXMu
-				dzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5CNI+
-				P0xNXxATTlNNdXRhYmxlRGljdGlvbmFyeaNMTkJcTlNE
-				aWN0aW9uYXJ50j4/UFFeUldTaXRlUmVzb3VyY2WiUkJe
-				UldTaXRlUmVzb3VyY2XZJQsmJygpKissLS4vL1hZWltc
-				CIAQgACAAIAWgBOAEoAVgBRfECRDNUI0NTE0Ri02RUI5
-				LTQ5QzUtOTVGQi1EM0QyMkM3QkMxRjFfEDRQREYgRm9y
-				IFBhcnRpY2lwYW50cyBTT1MgU3ltcG9zaXVtIDIwMTgg
-				c2NoZWR1bGUucGRmXxAkN0E2RjlFQ0QtRkMyMi00ODg0
-				LUI5MUUtNTdCOUE3NkRCMzEz0joLYTwjQcCQ5XMiA++A
+				gACADIAIgAeACoAJXxAkQzVCNDUxNEYtNkVCOS00OUM1
+				LTk1RkItRDNEMjJDN0JDMUYxXxA0UERGIEZvciBQYXJ0
+				aWNpcGFudHMgU09TIFN5bXBvc2l1bSAyMDE4IHNjaGVk
+				dWxlLnBkZl8QJDdBNkY5RUNELUZDMjItNDg4NC1COTFF
+				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcCQ5ofn
+				HyWAC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
+				YXRlokBCWE5TT2JqZWN00wkKC0RGSKFFgA2hR4AOgA9f
+				EC1zZnRwOi9jbXBseHN5cy53My51dm0uZWR1L3d3dy1y
+				b290L3RlbXBsYXRlcnkI0j4/TE1fEBNOU011dGFibGVE
+				aWN0aW9uYXJ5o0xOQlxOU0RpY3Rpb25hcnnSPj9QUV5S
+				V1NpdGVSZXNvdXJjZaJSQl5SV1NpdGVSZXNvdXJjZdkl
+				CyYnKCkqKywtLi8vWFlaW1wIgBCAAIAAgBaAE4ASgBWA
+				FF8QJDJFOEM3RERDLUFFQjQtNDFGQi1CRkVELUU2QjhD
+				MEQ0N0M5M18QI1BGRCBmb3IgcGFydGljaXBhbnRzIEhX
+				QiBBZ2VuZGEucGRmXxAkNUY4MDY4RDUtMDQ4Mi00MTAy
+				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcCQ5ofnIpaA
 				C9MJCgtkZkihZYAXoUeADoAPXxAtc2Z0cDovY21wbHhz
 				eXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5
 				0j4/a2xcTlNNdXRhYmxlU2V0o2ttQlVOU1NldNMJCgtv
-				ckiiWjOAEoAHoiIhgBGABoAP0wkKC3d6SKJaM4ASgAei
-				e3yAG4AggA/UC3+AgYKDESJYQ2hpbGRyZW5WUGFyZW50
-				XxASUmVwcmVzZW50ZWQgT2JqZWN0gCKAHIAegBHSCguH
+				ckiiM1qAB4ASoiEigAaAEYAP0wkKC3d6SKIzWoAHgBKi
+				e3yAG4AggA/UC3+AgYKDESFYQ2hpbGRyZW5WUGFyZW50
+				XxASUmVwcmVzZW50ZWQgT2JqZWN0gCKAHIAegAbSCguH
 				iKCAHdI+P4qLXk5TTXV0YWJsZUFycmF5o4qMQldOU0Fy
 				cmF51At/gIGCjy8vgCKAH4AAgADSCguTiKJ7fIAbgCCA
-				HdQLf4CBgpkRIYAigCGAHoAG0goLnYiggB3SPj+goV8Q
+				HdQLf4CBgpkRIoAigCGAHoAR0goLnYiggB3SPj+goV8Q
 				EFJXU291cmNlTGlzdE5vZGWiokJfEBBSV1NvdXJjZUxp
 				c3ROb2Rl0wkKC6SlSKCggA/SPj+oqV8QElJXUmVzb3Vy
 				Y2VEYXRhYmFzZaKqQl8QElJXUmVzb3VyY2VEYXRhYmFz
@@ -10099,9 +10149,9 @@
 				b3SAAQAIABEAGgAjAC0AMgA3AGAAZgBtAHUAgACHAIoA
 				jACOAJEAkwCVAJcAoAClALAAvwDIANEA2wDdAN8A4QDj
 				AOUA6gDtAO8A8QDzAQYBFQEiATABQgFHAVIBXAFmAWcB
-				aQFrAW0BbwFxAXMBdQF3AZ4BxAHrAfAB+AIBAgMCCAIT
-				AhwCIwImAi8CNgI4AjoCPAI+AkACcAJxAnYCjAKQAp0C
-				ogKxArQCwwLWAtcC2QLbAt0C3wLhAuMC5QLnAw4DRQNs
+				aQFrAW0BbwFxAXMBdQF3AZ4B1QH8AgECCQISAhQCGQIk
+				Ai0CNAI3AkACRwJJAksCTQJPAlECgQKCAocCnQKhAq4C
+				swLCAsUC1ALnAugC6gLsAu4C8ALyAvQC9gL4Ax8DRQNs
 				A3EDegN8A4MDhQOHA4kDiwONA70DwgPPA9MD2QPgA+MD
 				5QPnA+oD7APuA/AD9wP6A/wD/gQBBAMEBQQHBBAEGQQg
 				BDUENwQ5BDsEPQRCBEMERQRKBFkEXQRlBG4EcARyBHQE
