--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/02-Symposium---Health-and-Wellness/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/02-Symposium---Health-and-Wellness/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-08-11T15:33:26Z</date>
+						<date>2018-08-13T14:28:29Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -260,6 +260,26 @@
 								<key>Size</key>
 								<integer>402239</integer>
 							</dict>
+							<key>files/stacks-image-a036329-156x248.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								RTWYlmmLWn6R
+								HTW0sQzOjw==
+								</data>
+								<key>Size</key>
+								<integer>13409</integer>
+							</dict>
+							<key>files/stacks-image-a036329-156x248@2x.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								NEc9Uv2d3WDh
+								2s5rzRXy9A==
+								</data>
+								<key>Size</key>
+								<integer>30479</integer>
+							</dict>
 							<key>files/stacks-image-a3e2147-250x250.png</key>
 							<dict>
 								<key>Digest</key>
@@ -374,11 +394,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								GOj2nuNrrLil
-								rTkjxr7VVw==
+								rlJ4U3UQ+Bc/
+								OJ0Ei/wqhw==
 								</data>
 								<key>Size</key>
-								<integer>183563</integer>
+								<integer>186769</integer>
 							</dict>
 							<key>files/stacks_page_page34.js</key>
 							<dict>
@@ -394,11 +414,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								0ZPhdOwOa7JL
-								SbddwMa2Yg==
+								5PfYyElwh0km
+								XJrgr09lMQ==
 								</data>
 								<key>Size</key>
-								<integer>120195</integer>
+								<integer>122171</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
