--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/03-Symposium---Science-of-stories/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/03-Symposium---Science-of-stories/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-08-13T14:19:15Z</date>
+						<date>2018-08-13T14:27:54Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -382,11 +382,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								FBBSDZubOuNU
-								Kjvx3qrEhg==
+								wpDUEH7ktorE
+								cRLFyoZveA==
 								</data>
 								<key>Size</key>
-								<integer>184499</integer>
+								<integer>185673</integer>
 							</dict>
 							<key>files/stacks_page_page35.js</key>
 							<dict>
@@ -402,11 +402,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								3VwROfUHdxm/
-								399gLre6eA==
+								AkvluXTYUjy5
+								+sj9uFPt7w==
 								</data>
 								<key>Size</key>
-								<integer>125439</integer>
+								<integer>126017</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
