Fixing slider for mobile

--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -6506,7 +6506,7 @@
 					<key>page52 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-08-14T14:29:38Z</date>
+						<date>2018-08-14T15:09:53Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -6541,15 +6541,15 @@
 								<key>Size</key>
 								<integer>124861</integer>
 							</dict>
-							<key>files/stacks-image-1d10683-666x500.jpg</key>
+							<key>files/stacks-image-1d10683-800x500.jpg</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								FcI/Mp/S2MST
-								FDw50qdR2w==
+								1ztAYhKy9mqy
+								nVAoO2eUrQ==
 								</data>
 								<key>Size</key>
-								<integer>126157</integer>
+								<integer>180477</integer>
 							</dict>
 							<key>files/stacks-image-248de64-1200x776.jpg</key>
 							<dict>
@@ -6581,15 +6581,15 @@
 								<key>Size</key>
 								<integer>295684</integer>
 							</dict>
-							<key>files/stacks-image-5751fa0-750x500.jpg</key>
+							<key>files/stacks-image-5751fa0-800x500.jpg</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								ils0YE8Bo7cC
-								utaO84MhTg==
+								UCOC0wI9hbu8
+								AhLDaZRCoQ==
 								</data>
 								<key>Size</key>
-								<integer>140849</integer>
+								<integer>147580</integer>
 							</dict>
 							<key>files/stacks-image-580baf6-248x248.jpg</key>
 							<dict>
@@ -6611,25 +6611,25 @@
 								<key>Size</key>
 								<integer>146527</integer>
 							</dict>
-							<key>files/stacks-image-765d0a8-666x500.jpg</key>
+							<key>files/stacks-image-765d0a8-800x500.jpg</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								25fKlON0lBH/
-								0pMn8NPtYg==
+								eANjUeSJbW46
+								XxmJPl7RYA==
 								</data>
 								<key>Size</key>
-								<integer>146450</integer>
+								<integer>194068</integer>
 							</dict>
-							<key>files/stacks-image-7afeed7-750x500.jpg</key>
+							<key>files/stacks-image-7afeed7-800x500.jpg</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								0qAEBkoLDo7B
-								ts8HF7DpPg==
+								/34HX0kGRG45
+								C9CGvDjsuw==
 								</data>
 								<key>Size</key>
-								<integer>150248</integer>
+								<integer>154645</integer>
 							</dict>
 							<key>files/stacks-image-90966db-250x250.png</key>
 							<dict>
@@ -6651,25 +6651,25 @@
 								<key>Size</key>
 								<integer>228758</integer>
 							</dict>
-							<key>files/stacks-image-b198aab-666x500.jpg</key>
+							<key>files/stacks-image-b198aab-800x500.jpg</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								eaYIysXqvLH9
-								ZJYa22nPJQ==
+								YaInHxqGuvew
+								o9UH07zX8w==
 								</data>
 								<key>Size</key>
-								<integer>104274</integer>
+								<integer>114505</integer>
 							</dict>
-							<key>files/stacks-image-dc54b98-666x500.jpg</key>
+							<key>files/stacks-image-dc54b98-800x500.jpg</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								crv4aa4ojXs0
-								vF45rVifeg==
+								gu8VfhRwuxQr
+								FlE6zv3Upg==
 								</data>
 								<key>Size</key>
-								<integer>69413</integer>
+								<integer>88238</integer>
 							</dict>
 							<key>files/stacks-image-edf4fb1.jpg</key>
 							<dict>
@@ -6685,11 +6685,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								voqB0koG23Th
-								U8pWtbrXNg==
+								ksVvP35RCq1s
+								hmLBzCvg0Q==
 								</data>
 								<key>Size</key>
-								<integer>138765</integer>
+								<integer>138514</integer>
 							</dict>
 							<key>files/stacks_page_page52.js</key>
 							<dict>
@@ -6705,11 +6705,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								bfcUwDP0nUnD
-								2X5/VdcPyw==
+								hYzIxxsmx6DN
+								aK0NABepPw==
 								</data>
 								<key>Size</key>
-								<integer>72510</integer>
+								<integer>72006</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -8842,7 +8842,7 @@
 					<key>rw:document:extrafiles - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-08-14T14:29:38Z</date>
+						<date>2018-08-14T15:09:53Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -8891,11 +8891,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Mm/IkEWEChOu
-								08Xplu5T2Q==
+								zAbWQSDzqYeM
+								URijp1ssKA==
 								</data>
 								<key>Size</key>
-								<integer>4281</integer>
+								<integer>5625</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -10091,8 +10091,8 @@
 				LTk1RkItRDNEMjJDN0JDMUYxXxA0UERGIEZvciBQYXJ0
 				aWNpcGFudHMgU09TIFN5bXBvc2l1bSAyMDE4IHNjaGVk
 				dWxlLnBkZl8QJDdBNkY5RUNELUZDMjItNDg4NC1COTFF
-				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcCRj3dw
-				8lqAC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
+				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcCRlCHC
+				MrGAC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
 				YXRlokBCWE5TT2JqZWN00wkKC0RGSKFFgA2hR4AOgA9f
 				EC1zZnRwOi9jbXBseHN5cy53My51dm0uZWR1L3d3dy1y
 				b290L3RlbXBsYXRlcnkI0j4/TE1fEBNOU011dGFibGVE
@@ -10102,7 +10102,7 @@
 				FF8QJDJFOEM3RERDLUFFQjQtNDFGQi1CRkVELUU2QjhD
 				MEQ0N0M5M18QI1BGRCBmb3IgcGFydGljaXBhbnRzIEhX
 				QiBBZ2VuZGEucGRmXxAkNUY4MDY4RDUtMDQ4Mi00MTAy
-				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcCRj3dw9ZmA
+				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcCRlCHCN7WA
 				C9MJCgtkZkihZYAXoUeADoAPXxAtc2Z0cDovY21wbHhz
 				eXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5
 				0j4/a2xcTlNNdXRhYmxlU2V0o2ttQlVOU1NldNMJCgtv
@@ -16375,7 +16375,7 @@
 					<key>UniqueBackupName</key>
 					<string>986C317C-4106-4888-8861-F3B56F718A72_rwbackup</string>
 					<key>UserAgentResizingPreset</key>
-					<integer>0</integer>
+					<integer>3</integer>
 					<key>WantsXMLSiteMap</key>
 					<true/>
 					<key>WebClipIcon</key>
